Fix HTML comment syntax to standard <!-- ... --> format

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <!--- Metadata and page setup --->
+  <!--  Metadata and page setup - -->
   <meta charset="utf-8" />
   <meta name="description" content="The Countdown Timer" />
   <meta name="keywords" content="mths, icd2o" />
@@ -10,36 +10,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-  <!--- External Stylesheets and Fonts --->
+  <!--  External Stylesheets and Fonts - -->
   <link rel="stylesheet" href="./css/style.css" />
-  <!--- Custom styles --->
+  <!--  Custom styles - -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-  <!--- Material Icons --->
+  <!--  Material Icons - -->
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css" />
-  <!--- MDL theme --->
+  <!--  MDL theme - -->
 
 
-  <!--- Favicon setup for different devices --->
+  <!--  Favicon setup for different devices - -->
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png" />
   <link rel="manifest" href="site.webmanifest" />
 
 
-  <!--- Page title --->
+  <!--  Page title - -->
   <title>The Countdown Timer</title>
 </head>
 
 
 <body>
-  <!--- JavaScript files loaded after HTML content (deferred) --->
+  <!--  JavaScript files loaded after HTML content (deferred) - -->
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-  <!--- MDL script --->
+  <!--  MDL script - -->
   <script defer src="./js/script.js"></script>
-  <!--- Custom script --->
+  <!--  Custom script - -->
 
 
-  <!--- Main layout using MDL classes --->
+  <!--  Main layout using MDL classes - -->
 
 
   <div class="mdl-layout mdl-js-layout mdl-layout-fixed-header">
@@ -50,21 +50,21 @@
     </header>
 
 
-    <!--- Main content area --->
+    <!--  Main content area - -->
     <main class="mdl-layout-content">
       <div class="page-content">
-        <!--- Right-side image for visual decoration --->
+        <!--  Right-side image for visual decoration - -->
         <div class="right-image">
           <img src="./images/pngtree-orange-stop-watch-timer-vector-png-image_7117936.png" alt="Timer image" />
         </div>
 
 
-        <!--- Countdown timer form and display --->
+        <!--  Countdown timer form and display - -->
         <div class="container">
           <h1>Countdown Timer</h1>
 
 
-          <!--- Timer input form --->
+          <!--  Timer input form - -->
           <form id="timer-form">
             <label>
               Days:
@@ -86,16 +86,16 @@
           </form>
 
 
-          <!--- Display area for live countdown --->
+          <!--  Display area for live countdown - -->
           <div id="timer-display">00:00:00:00</div>
 
 
-          <!--- Audio that plays at the end of countdown --->
+          <!--  Audio that plays at the end of countdown - -->
           <audio id="final-countdown-audio" src="final-countdown.mp3"></audio>
         </div>
 
 
-        <!--- Optional additional JavaScript --->
+        <!--  Optional additional JavaScript - -->
         <script src="main.js"></script>
       </div>
     </main>
