changed the button label

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 Seconds:
                 <input type="number" id="seconds" min="0" max="59" value="0" />
               </label>
-              <br /><button type="submit">Start Countdown</button><br />
+              <br /><button type="submit">START THE COUNTDOWN</button><br />
             </form>
 
             <!--  Display area for live countdown - -->
