--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="page-content">
         <!-- Right-side image for visual decoration -->
         <div class="right-image">
-          <img src="./assets/images/pngtree-orange-stop-watch-timer-vector-png-image_7117936.png" alt="Timer image" />
+          <img src="./assets/images/pngtree-orange-stop-watch-timer-vector-png-image_7117936.png" alt="Timer image" class="force-center" />
         </div>
 
         <!-- Countdown timer form and display -->
@@ -80,7 +80,7 @@
           <div id="timer-display">00:00:00:00</div>
 
           <!-- Audio that plays at the end of countdown -->
-          <audio id="timer-sound" src="./audio/Europe-The-Final-Countdown-v4.mp3"></audio>
+          <audio id="timer-sound" src="./assets/audio/Europe-The-Final-Countdown-v4.mp3"></audio>
         </div>
 
         <!-- Optional additional JavaScript -->
