Fix linter errors in CSS and JS for countdown timer

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
   <!-- Custom script -->
 
   <!-- Main layout using MDL classes -->
-
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header">
       <div class="mdl-layout__header-row">
@@ -48,7 +47,8 @@
       <div class="page-content">
         <!-- Right-side image for visual decoration -->
         <div class="right-image">
-          <img src="./assets/images/pngtree-orange-stop-watch-timer-vector-png-image_7117936.png" alt="Timer image" class="force-center" />
+          <img src="./assets/images/pngtree-orange-stop-watch-timer-vector-png-image_7117936.png" alt="Timer image"
+            class="force-center" />
         </div>
 
         <!-- Countdown timer form and display -->
@@ -73,7 +73,9 @@
               Seconds:
               <input type="number" id="seconds" min="0" max="59" value="0" />
             </label>
-            <br><button type="submit">Start Countdown</button><br>
+            <br>
+            <button type="submit">Start Countdown</button>
+            <br>
           </form>
 
           <!-- Display area for live countdown -->
