added fireworks audio and effects

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
           <audio id="timer-sound" src="./assets/audio/Europe-The-Final-Countdown-v4.mp3"></audio>
         </div>
 
+        <!-- Audio that plays the firework sound -->
+        <audio id="firework-sound" src="./assets/audio/new-year-fireworks-sound4-180205.mp3"></audio>
+
         <!-- Optional additional JavaScript -->
         <script src="main.js"></script>
       </div>
